# esp32-kvm

./: .gitignore  CMakeLists.txt  README.md  main.py  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild
main/include/: app_config.h  ble_hid_api.h  ble_hid_internal.h  hid_reports.h  uart_proto.h
main/src/: app_main.c  ble_hid_api.c  ble_hid_gatt.c  hid_report_transport.c  uart_proto.c
